Fix the failed tests